--- a/docs/feui/guide/component/header.html
+++ b/docs/feui/guide/component/header.html
@@ -1,10 +1,10 @@
 
 <!doctype html>
 <html lang="en">
-<head>
+<head><meta name="generator" content="Hexo 3.9.0">
     <title>Header 头部 — Feui</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
     <!--[if lte IE 9]>
       <meta http-equiv="refresh" content="0;url=https://ifuyuan.wang/browser/">
@@ -14,41 +14,41 @@
     <script>window.PAGE_TYPE = "guide"</script>
 </head>
 
-<a href="https://github.com/zoeblow/feui" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="60" height="60" viewBox="0 0 250 250" style="fill:#41b883; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 99;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
-<div id='progress'></div>
+<a href="https://github.com/zoeblow/feui" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="60" height="60" viewbox="0 0 250 250" style="fill:#41b883; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 99;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a>
+<div id="progress"></div>
 <body class="docs">
     <div id="header">
   <a id="logo" href="/docs/">
     <img src="/docs/images/logo.png">
     <span>Feui</span>
   </a>
-  <button id='mobile'>
+  <button id="mobile">
     <span class="btn-bar"></span>
     <span class="btn-bar"></span>
     <span class="btn-bar"></span>
   </button>  
   <ul id="nav">
     <li><a href="/docs/feui/guide/" class="nav-link current">教程</a></li>
-<li><a href="https://feui.gitee.io" >示例</a></li>
+<li><a href="https://feui.gitee.io">示例</a></li>
 <li><a href="/docs/feui/guide/team.html" class="nav-link team">Team</a></li>
   </ul>
 </div>
     
       <div id="main" class="fix-sidebar">
-        <div class='main-content'>
+        <div class="main-content">
           
-            <button id='mobile2'>
+            <button id="mobile2">
   <span class="btn-bar"></span>
   <span class="btn-bar"></span>
   <span class="btn-bar"></span>
 </button>  
-<div id='mask'></div>
+<div id="mask"></div>
 
   <div class="sidebar" id="sidebar">
   <div class="sidebar-inner">
     <ul class="main-menu">
       <li><a href="/docs/feui/guide/" class="nav-link current">教程</a></li>
-<li><a href="https://feui.gitee.io" >示例</a></li>
+<li><a href="https://feui.gitee.io">示例</a></li>
 <li><a href="/docs/feui/guide/team.html" class="nav-link team">Team</a></li>
     </ul>
     <div class="list">
@@ -57,7 +57,7 @@
     
     
       
-        <li><a class='title-18'>开发指南</a></li>
+        <li><a class="title-18">开发指南</a></li>
       
       
       
@@ -116,7 +116,7 @@
     
       
       
-        <li><a class='title-18'>组件系统</a></li>
+        <li><a class="title-18">组件系统</a></li>
       
       
       
@@ -162,7 +162,7 @@
       
       
       
-        <li><a class='title-16'>基础组件</a></li>
+        <li><a class="title-16">基础组件</a></li>
       
       
       
@@ -333,7 +333,7 @@
       
       
       
-        <li><a class='title-16'>表单组件</a></li>
+        <li><a class="title-16">表单组件</a></li>
       
       
     
@@ -381,7 +381,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
+      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link">Checker 选择按钮</a>
     </li>
   
     
@@ -395,7 +395,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link">Checker 选择按钮</a>
+      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
     </li>
   
     
@@ -588,7 +588,7 @@
       
       
       
-        <li><a class='title-16'>反馈组件</a></li>
+        <li><a class="title-16">反馈组件</a></li>
       
     
     
@@ -769,7 +769,7 @@
       
       
       
-        <li><a class='title-18'>Team</a></li>
+        <li><a class="title-18">Team</a></li>
       
       
       
@@ -788,25 +788,25 @@
 
 
 
-<div  id='content' class="content guide with-sidebar header-guide">
-  <div class='content_box'>
+<div id="content" class="content guide with-sidebar header-guide">
+  <div class="content_box">
     
       <h1>Header 头部</h1>
     
-    <div id='pContent'>
+    <div id="pContent">
       <p><a href="https://feui.gitee.io/#/header">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Header &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Header.name]: Header</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>我是一个标题<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="自定义返回事件"><a href="#自定义返回事件" class="headerlink" title="自定义返回事件"></a>自定义返回事件</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">style</span>=<span class="string">"background-color:#f00;"</span> </span></div><div class="line"><span class="tag">    @<span class="attr">on-click-back</span>=<span class="string">'clickBack'</span> </span></div><div class="line"><span class="tag">    <span class="attr">:left-options</span>=<span class="string">"&#123;preventGoBack: true&#125;"</span> &gt;</span>自定义返回事件</div><div class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<figure class="highlight js"><table><tr><td class="code"><pre><div class="line"> methods: &#123;</div><div class="line">  clickBack () &#123;</div><div class="line">     alert(<span class="string">'自定义返回事件'</span>)</div><div class="line">   &#125;</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<h4 id="不显示返回按钮"><a href="#不显示返回按钮" class="headerlink" title="不显示返回按钮"></a>不显示返回按钮</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">:left-options</span>=<span class="string">"&#123;showBack: false&#125;"</span>&gt;</span>不显示返回按钮<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h3 id="不显示左边文字"><a href="#不显示左边文字" class="headerlink" title="不显示左边文字"></a>不显示左边文字</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">:left-options</span>=<span class="string">"&#123;backText: ''&#125;"</span>&gt;</span>不显示左边文字<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="显示更多按钮"><a href="#显示更多按钮" class="headerlink" title="显示更多按钮"></a>显示更多按钮</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">:right-options</span>=<span class="string">"&#123;showMore: true&#125;"</span> </span></div><div class="line"><span class="tag">  @<span class="attr">on-click-more</span>=<span class="string">"showMenus = true"</span>&gt;</span>显示更多按钮</div><div class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="右边加点东西"><a href="#右边加点东西" class="headerlink" title="右边加点东西"></a>右边加点东西</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>右边连接<span class="tag">&lt;<span class="name">a</span> <span class="attr">slot</span>=<span class="string">"right"</span>&gt;</span>Feedback<span class="tag">&lt;/<span class="name">a</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="标题要长"><a href="#标题要长" class="headerlink" title="标题要长"></a>标题要长</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>标题要长长长长长长长长长长长长长长长长长长长长长长长</div><div class="line">  <span class="tag">&lt;<span class="name">a</span> <span class="attr">slot</span>=<span class="string">"right"</span>&gt;</span>Feedback<span class="tag">&lt;/<span class="name">a</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="左边加点东西"><a href="#左边加点东西" class="headerlink" title="左边加点东西"></a>左边加点东西</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>左边也能现实点啥<span class="tag">&lt;<span class="name">a</span> <span class="attr">slot</span>=<span class="string">"left"</span>&gt;</span>Close<span class="tag">&lt;/<span class="name">a</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="重写左边"><a href="#重写左边" class="headerlink" title="重写左边"></a>重写左边</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">span</span>&gt;</span>重写左边<span class="tag">&lt;/<span class="name">span</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-icon</span> <span class="attr">slot</span>=<span class="string">"overwrite-left"</span> <span class="attr">type</span>=<span class="string">"navicon"</span> <span class="attr">size</span>=<span class="string">"35"</span> </span></div><div class="line"><span class="tag">    <span class="attr">style</span>=<span class="string">"fill:#fff;position:relative;top:-8px;left:-3px;"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;/<span class="name">fe-icon</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="自定义背景色"><a href="#自定义背景色" class="headerlink" title="自定义背景色"></a>自定义背景色</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">style</span>=<span class="string">"background-color:#000;"</span>&gt;</span>自定义背景颜色<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></div></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><span class="line"><span class="keyword">import</span> &#123; Header &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</span><br><span class="line"></span><br><span class="line">components: &#123;</span><br><span class="line">  [Header.name]: Header</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>我是一个标题<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="自定义返回事件"><a href="#自定义返回事件" class="headerlink" title="自定义返回事件"></a>自定义返回事件</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">style</span>=<span class="string">"background-color:#f00;"</span> </span></span><br><span class="line"><span class="tag">    @<span class="attr">on-click-back</span>=<span class="string">'clickBack'</span> </span></span><br><span class="line"><span class="tag">    <span class="attr">:left-options</span>=<span class="string">"&#123;preventGoBack: true&#125;"</span> &gt;</span>自定义返回事件</span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<figure class="highlight js"><table><tr><td class="code"><pre><span class="line"> methods: &#123;</span><br><span class="line">  clickBack () &#123;</span><br><span class="line">     alert(<span class="string">'自定义返回事件'</span>)</span><br><span class="line">   &#125;</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
+<h4 id="不显示返回按钮"><a href="#不显示返回按钮" class="headerlink" title="不显示返回按钮"></a>不显示返回按钮</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">:left-options</span>=<span class="string">"&#123;showBack: false&#125;"</span>&gt;</span>不显示返回按钮<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h3 id="不显示左边文字"><a href="#不显示左边文字" class="headerlink" title="不显示左边文字"></a>不显示左边文字</h3><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">:left-options</span>=<span class="string">"&#123;backText: ''&#125;"</span>&gt;</span>不显示左边文字<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="显示更多按钮"><a href="#显示更多按钮" class="headerlink" title="显示更多按钮"></a>显示更多按钮</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">:right-options</span>=<span class="string">"&#123;showMore: true&#125;"</span> </span></span><br><span class="line"><span class="tag">  @<span class="attr">on-click-more</span>=<span class="string">"showMenus = true"</span>&gt;</span>显示更多按钮</span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="右边加点东西"><a href="#右边加点东西" class="headerlink" title="右边加点东西"></a>右边加点东西</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>右边连接<span class="tag">&lt;<span class="name">a</span> <span class="attr">slot</span>=<span class="string">"right"</span>&gt;</span>Feedback<span class="tag">&lt;/<span class="name">a</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="标题要长"><a href="#标题要长" class="headerlink" title="标题要长"></a>标题要长</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>标题要长长长长长长长长长长长长长长长长长长长长长长长</span><br><span class="line">  <span class="tag">&lt;<span class="name">a</span> <span class="attr">slot</span>=<span class="string">"right"</span>&gt;</span>Feedback<span class="tag">&lt;/<span class="name">a</span>&gt;</span></span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="左边加点东西"><a href="#左边加点东西" class="headerlink" title="左边加点东西"></a>左边加点东西</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span>左边也能现实点啥<span class="tag">&lt;<span class="name">a</span> <span class="attr">slot</span>=<span class="string">"left"</span>&gt;</span>Close<span class="tag">&lt;/<span class="name">a</span>&gt;</span><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="重写左边"><a href="#重写左边" class="headerlink" title="重写左边"></a>重写左边</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span>&gt;</span></span><br><span class="line">  <span class="tag">&lt;<span class="name">span</span>&gt;</span>重写左边<span class="tag">&lt;/<span class="name">span</span>&gt;</span></span><br><span class="line">  <span class="tag">&lt;<span class="name">fe-icon</span> <span class="attr">slot</span>=<span class="string">"overwrite-left"</span> <span class="attr">type</span>=<span class="string">"navicon"</span> <span class="attr">size</span>=<span class="string">"35"</span> </span></span><br><span class="line"><span class="tag">    <span class="attr">style</span>=<span class="string">"fill:#fff;position:relative;top:-8px;left:-3px;"</span>&gt;</span></span><br><span class="line">  <span class="tag">&lt;/<span class="name">fe-icon</span>&gt;</span></span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h4 id="自定义背景色"><a href="#自定义背景色" class="headerlink" title="自定义背景色"></a>自定义背景色</h4><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-header</span> <span class="attr">style</span>=<span class="string">"background-color:#000;"</span>&gt;</span>自定义背景颜色<span class="tag">&lt;/<span class="name">fe-header</span>&gt;</span></span><br></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
