--- a/docs/feui/guide/component/inlinecalendar.html
+++ b/docs/feui/guide/component/inlinecalendar.html
@@ -1,10 +1,10 @@
 
 <!doctype html>
 <html lang="en">
-<head>
+<head><meta name="generator" content="Hexo 3.9.0">
     <title>inlineCalendar 日历组件 — Feui</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
     <!--[if lte IE 9]>
       <meta http-equiv="refresh" content="0;url=https://ifuyuan.wang/browser/">
@@ -14,41 +14,41 @@
     <script>window.PAGE_TYPE = "guide"</script>
 </head>
 
-<a href="https://github.com/zoeblow/feui" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="60" height="60" viewBox="0 0 250 250" style="fill:#41b883; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 99;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
-<div id='progress'></div>
+<a href="https://github.com/zoeblow/feui" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="60" height="60" viewbox="0 0 250 250" style="fill:#41b883; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 99;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a>
+<div id="progress"></div>
 <body class="docs">
     <div id="header">
   <a id="logo" href="/docs/">
     <img src="/docs/images/logo.png">
     <span>Feui</span>
   </a>
-  <button id='mobile'>
+  <button id="mobile">
     <span class="btn-bar"></span>
     <span class="btn-bar"></span>
     <span class="btn-bar"></span>
   </button>  
   <ul id="nav">
     <li><a href="/docs/feui/guide/" class="nav-link current">教程</a></li>
-<li><a href="https://feui.gitee.io" >示例</a></li>
+<li><a href="https://feui.gitee.io">示例</a></li>
 <li><a href="/docs/feui/guide/team.html" class="nav-link team">Team</a></li>
   </ul>
 </div>
     
       <div id="main" class="fix-sidebar">
-        <div class='main-content'>
+        <div class="main-content">
           
-            <button id='mobile2'>
+            <button id="mobile2">
   <span class="btn-bar"></span>
   <span class="btn-bar"></span>
   <span class="btn-bar"></span>
 </button>  
-<div id='mask'></div>
+<div id="mask"></div>
 
   <div class="sidebar" id="sidebar">
   <div class="sidebar-inner">
     <ul class="main-menu">
       <li><a href="/docs/feui/guide/" class="nav-link current">教程</a></li>
-<li><a href="https://feui.gitee.io" >示例</a></li>
+<li><a href="https://feui.gitee.io">示例</a></li>
 <li><a href="/docs/feui/guide/team.html" class="nav-link team">Team</a></li>
     </ul>
     <div class="list">
@@ -57,7 +57,7 @@
     
     
       
-        <li><a class='title-18'>开发指南</a></li>
+        <li><a class="title-18">开发指南</a></li>
       
       
       
@@ -116,7 +116,7 @@
     
       
       
-        <li><a class='title-18'>组件系统</a></li>
+        <li><a class="title-18">组件系统</a></li>
       
       
       
@@ -162,7 +162,7 @@
       
       
       
-        <li><a class='title-16'>基础组件</a></li>
+        <li><a class="title-16">基础组件</a></li>
       
       
       
@@ -333,7 +333,7 @@
       
       
       
-        <li><a class='title-16'>表单组件</a></li>
+        <li><a class="title-16">表单组件</a></li>
       
       
     
@@ -381,7 +381,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
+      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link">Checker 选择按钮</a>
     </li>
   
     
@@ -395,7 +395,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link">Checker 选择按钮</a>
+      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
     </li>
   
     
@@ -588,7 +588,7 @@
       
       
       
-        <li><a class='title-16'>反馈组件</a></li>
+        <li><a class="title-16">反馈组件</a></li>
       
     
     
@@ -769,7 +769,7 @@
       
       
       
-        <li><a class='title-18'>Team</a></li>
+        <li><a class="title-18">Team</a></li>
       
       
       
@@ -788,15 +788,15 @@
 
 
 
-<div  id='content' class="content guide with-sidebar inlinecalendar-guide">
-  <div class='content_box'>
+<div id="content" class="content guide with-sidebar inlinecalendar-guide">
+  <div class="content_box">
     
       <h1>inlineCalendar 日历组件</h1>
     
-    <div id='pContent'>
+    <div id="pContent">
       <p><a href="https://feui.gitee.io/#/inlinecalendar">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Inlinecalendar &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Inlinecalendar.name]: Inlinecalendar</div><div class="line">&#125;</div><div class="line">data () &#123;</div><div class="line">  <span class="keyword">return</span> &#123;</div><div class="line">    show: <span class="literal">true</span>,</div><div class="line">    value: [<span class="string">'2018-11-10'</span>,<span class="string">'2018-11-11'</span>,<span class="string">'2018-11-12'</span>],</div><div class="line">    listValue: <span class="string">''</span>,</div><div class="line">    range: <span class="literal">false</span>,</div><div class="line">    showLastMonth: <span class="literal">true</span>,</div><div class="line">    showNextMonth: <span class="literal">true</span>,</div><div class="line">    highlightWeekend: <span class="literal">false</span>,</div><div class="line">    return6Rows: <span class="literal">true</span>,</div><div class="line">    hideHeader: <span class="literal">false</span>,</div><div class="line">    hideWeekList: <span class="literal">false</span>,</div><div class="line">    replaceTextList: &#123;&#125;,</div><div class="line">    replace: <span class="literal">false</span>,</div><div class="line">    changeWeeksList: <span class="literal">false</span>,</div><div class="line">    weeksList: [],</div><div class="line">    useCustomFn: <span class="literal">false</span>,</div><div class="line">    buildSlotFn: <span class="function"><span class="params">()</span> =&gt;</span> <span class="string">''</span>,</div><div class="line">    disablePast: <span class="literal">false</span>,</div><div class="line">    disableFuture: <span class="literal">false</span>,</div><div class="line">    disableWeekend: <span class="literal">false</span>,</div><div class="line">    disableDateFunction (date) &#123;</div><div class="line">      <span class="keyword">if</span> (date.formatedDate === <span class="string">'2017-10-16'</span>) &#123;</div><div class="line">        <span class="keyword">return</span> <span class="literal">true</span></div><div class="line">      &#125;</div><div class="line">    &#125;</div><div class="line">  &#125;</div><div class="line">&#125;,</div></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-inlinecalendar</span></span></div><div class="line"><span class="tag">  <span class="attr">ref</span>=<span class="string">"calendar"</span></span></div><div class="line"><span class="tag">  @<span class="attr">on-change</span>=<span class="string">"onChange"</span></span></div><div class="line"><span class="tag">  @<span class="attr">on-view-change</span>=<span class="string">"onViewChange"</span></span></div><div class="line"><span class="tag">  <span class="attr">class</span>=<span class="string">"inline-calendar-demo"</span></span></div><div class="line"><span class="tag">  <span class="attr">:show.sync</span>=<span class="string">"show"</span></span></div><div class="line"><span class="tag">  <span class="attr">v-model</span>=<span class="string">"value"</span></span></div><div class="line"><span class="tag">  <span class="attr">start-date</span>=<span class="string">"2016-04-21"</span></span></div><div class="line"><span class="tag">  <span class="attr">end-date</span>=<span class="string">"2018-11-11"</span></span></div><div class="line"><span class="tag">  <span class="attr">:range</span>=<span class="string">"range"</span></span></div><div class="line"><span class="tag">  <span class="attr">:show-last-month</span>=<span class="string">"showLastMonth"</span></span></div><div class="line"><span class="tag">  <span class="attr">:show-next-month</span>=<span class="string">"showNextMonth"</span></span></div><div class="line"><span class="tag">  <span class="attr">:highlight-weekend</span>=<span class="string">"highlightWeekend"</span></span></div><div class="line"><span class="tag">  <span class="attr">:return-six-rows</span>=<span class="string">"return6Rows"</span></span></div><div class="line"><span class="tag">  <span class="attr">:hide-header</span>=<span class="string">"hideHeader"</span></span></div><div class="line"><span class="tag">  <span class="attr">:hide-week-list</span>=<span class="string">"hideWeekList"</span></span></div><div class="line"><span class="tag">  <span class="attr">:replace-text-list</span>=<span class="string">"replaceTextList"</span></span></div><div class="line"><span class="tag">  <span class="attr">:weeks-list</span>=<span class="string">"weeksList"</span></span></div><div class="line"><span class="tag">  <span class="attr">:render-function</span>=<span class="string">"buildSlotFn"</span></span></div><div class="line"><span class="tag">  <span class="attr">:disable-past</span>=<span class="string">"disablePast"</span></span></div><div class="line"><span class="tag">  <span class="attr">:disable-future</span>=<span class="string">"disableFuture"</span></span></div><div class="line"><span class="tag">  <span class="attr">:disable-weekend</span>=<span class="string">"disableWeekend"</span></span></div><div class="line"><span class="tag">  <span class="attr">:disable-date-function</span>=<span class="string">"disableDateFunction"</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-inlinecalendar</span>&gt;</span></div></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><span class="line"><span class="keyword">import</span> &#123; Inlinecalendar &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</span><br><span class="line"></span><br><span class="line">components: &#123;</span><br><span class="line">  [Inlinecalendar.name]: Inlinecalendar</span><br><span class="line">&#125;</span><br><span class="line">data () &#123;</span><br><span class="line">  <span class="keyword">return</span> &#123;</span><br><span class="line">    show: <span class="literal">true</span>,</span><br><span class="line">    value: [<span class="string">'2018-11-10'</span>,<span class="string">'2018-11-11'</span>,<span class="string">'2018-11-12'</span>],</span><br><span class="line">    listValue: <span class="string">''</span>,</span><br><span class="line">    range: <span class="literal">false</span>,</span><br><span class="line">    showLastMonth: <span class="literal">true</span>,</span><br><span class="line">    showNextMonth: <span class="literal">true</span>,</span><br><span class="line">    highlightWeekend: <span class="literal">false</span>,</span><br><span class="line">    return6Rows: <span class="literal">true</span>,</span><br><span class="line">    hideHeader: <span class="literal">false</span>,</span><br><span class="line">    hideWeekList: <span class="literal">false</span>,</span><br><span class="line">    replaceTextList: &#123;&#125;,</span><br><span class="line">    replace: <span class="literal">false</span>,</span><br><span class="line">    changeWeeksList: <span class="literal">false</span>,</span><br><span class="line">    weeksList: [],</span><br><span class="line">    useCustomFn: <span class="literal">false</span>,</span><br><span class="line">    buildSlotFn: <span class="function"><span class="params">()</span> =&gt;</span> <span class="string">''</span>,</span><br><span class="line">    disablePast: <span class="literal">false</span>,</span><br><span class="line">    disableFuture: <span class="literal">false</span>,</span><br><span class="line">    disableWeekend: <span class="literal">false</span>,</span><br><span class="line">    disableDateFunction (date) &#123;</span><br><span class="line">      <span class="keyword">if</span> (date.formatedDate === <span class="string">'2017-10-16'</span>) &#123;</span><br><span class="line">        <span class="keyword">return</span> <span class="literal">true</span></span><br><span class="line">      &#125;</span><br><span class="line">    &#125;</span><br><span class="line">  &#125;</span><br><span class="line">&#125;,</span><br></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-inlinecalendar</span></span></span><br><span class="line"><span class="tag">  <span class="attr">ref</span>=<span class="string">"calendar"</span></span></span><br><span class="line"><span class="tag">  @<span class="attr">on-change</span>=<span class="string">"onChange"</span></span></span><br><span class="line"><span class="tag">  @<span class="attr">on-view-change</span>=<span class="string">"onViewChange"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">class</span>=<span class="string">"inline-calendar-demo"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:show.sync</span>=<span class="string">"show"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">v-model</span>=<span class="string">"value"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">start-date</span>=<span class="string">"2016-04-21"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">end-date</span>=<span class="string">"2018-11-11"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:range</span>=<span class="string">"range"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:show-last-month</span>=<span class="string">"showLastMonth"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:show-next-month</span>=<span class="string">"showNextMonth"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:highlight-weekend</span>=<span class="string">"highlightWeekend"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:return-six-rows</span>=<span class="string">"return6Rows"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:hide-header</span>=<span class="string">"hideHeader"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:hide-week-list</span>=<span class="string">"hideWeekList"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:replace-text-list</span>=<span class="string">"replaceTextList"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:weeks-list</span>=<span class="string">"weeksList"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:render-function</span>=<span class="string">"buildSlotFn"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:disable-past</span>=<span class="string">"disablePast"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:disable-future</span>=<span class="string">"disableFuture"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:disable-weekend</span>=<span class="string">"disableWeekend"</span></span></span><br><span class="line"><span class="tag">  <span class="attr">:disable-date-function</span>=<span class="string">"disableDateFunction"</span>&gt;</span></span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-inlinecalendar</span>&gt;</span></span><br></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
