--- a/docs/feui/guide/component/uploader.html
+++ b/docs/feui/guide/component/uploader.html
@@ -1,10 +1,10 @@
 
 <!doctype html>
 <html lang="en">
-<head>
+<head><meta name="generator" content="Hexo 3.9.0">
     <title>Uploader 上传 — Feui</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
     <!--[if lte IE 9]>
       <meta http-equiv="refresh" content="0;url=https://ifuyuan.wang/browser/">
@@ -14,41 +14,41 @@
     <script>window.PAGE_TYPE = "guide"</script>
 </head>
 
-<a href="https://github.com/zoeblow/feui" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="60" height="60" viewBox="0 0 250 250" style="fill:#41b883; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 99;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
-<div id='progress'></div>
+<a href="https://github.com/zoeblow/feui" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="60" height="60" viewbox="0 0 250 250" style="fill:#41b883; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 99;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a>
+<div id="progress"></div>
 <body class="docs">
     <div id="header">
   <a id="logo" href="/docs/">
     <img src="/docs/images/logo.png">
     <span>Feui</span>
   </a>
-  <button id='mobile'>
+  <button id="mobile">
     <span class="btn-bar"></span>
     <span class="btn-bar"></span>
     <span class="btn-bar"></span>
   </button>  
   <ul id="nav">
     <li><a href="/docs/feui/guide/" class="nav-link current">教程</a></li>
-<li><a href="https://feui.gitee.io" >示例</a></li>
+<li><a href="https://feui.gitee.io">示例</a></li>
 <li><a href="/docs/feui/guide/team.html" class="nav-link team">Team</a></li>
   </ul>
 </div>
     
       <div id="main" class="fix-sidebar">
-        <div class='main-content'>
+        <div class="main-content">
           
-            <button id='mobile2'>
+            <button id="mobile2">
   <span class="btn-bar"></span>
   <span class="btn-bar"></span>
   <span class="btn-bar"></span>
 </button>  
-<div id='mask'></div>
+<div id="mask"></div>
 
   <div class="sidebar" id="sidebar">
   <div class="sidebar-inner">
     <ul class="main-menu">
       <li><a href="/docs/feui/guide/" class="nav-link current">教程</a></li>
-<li><a href="https://feui.gitee.io" >示例</a></li>
+<li><a href="https://feui.gitee.io">示例</a></li>
 <li><a href="/docs/feui/guide/team.html" class="nav-link team">Team</a></li>
     </ul>
     <div class="list">
@@ -57,7 +57,7 @@
     
     
       
-        <li><a class='title-18'>开发指南</a></li>
+        <li><a class="title-18">开发指南</a></li>
       
       
       
@@ -116,7 +116,7 @@
     
       
       
-        <li><a class='title-18'>组件系统</a></li>
+        <li><a class="title-18">组件系统</a></li>
       
       
       
@@ -162,7 +162,7 @@
       
       
       
-        <li><a class='title-16'>基础组件</a></li>
+        <li><a class="title-16">基础组件</a></li>
       
       
       
@@ -333,7 +333,7 @@
       
       
       
-        <li><a class='title-16'>表单组件</a></li>
+        <li><a class="title-16">表单组件</a></li>
       
       
     
@@ -381,7 +381,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
+      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link">Checker 选择按钮</a>
     </li>
   
     
@@ -395,7 +395,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/checker.html" class="sidebar-link">Checker 选择按钮</a>
+      <a href="/docs/feui/guide/component/checklist.html" class="sidebar-link">Checklist 按钮组</a>
     </li>
   
     
@@ -588,7 +588,7 @@
       
       
       
-        <li><a class='title-16'>反馈组件</a></li>
+        <li><a class="title-16">反馈组件</a></li>
       
     
     
@@ -769,7 +769,7 @@
       
       
       
-        <li><a class='title-18'>Team</a></li>
+        <li><a class="title-18">Team</a></li>
       
       
       
@@ -788,16 +788,16 @@
 
 
 
-<div  id='content' class="content guide with-sidebar uploader-guide">
-  <div class='content_box'>
+<div id="content" class="content guide with-sidebar uploader-guide">
+  <div class="content_box">
     
       <h1>Uploader 上传</h1>
     
-    <div id='pContent'>
+    <div id="pContent">
       <p><a href="https://feui.gitee.io/#/uploader">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Uploader &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Uploader.name]: Uploader</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<h3 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-uploader</span> <span class="attr">:after-read</span>=<span class="string">"logContent"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">type</span>=<span class="string">"camera"</span> /&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-uploader</span>&gt;</span></div></pre></td></tr></table></figure>
-<h3 id="设置input属性"><a href="#设置input属性" class="headerlink" title="设置input属性"></a>设置<code>input</code>属性</h3><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-uploader</span> <span class="attr">:after-read</span>=<span class="string">"logContent"</span> </span></div><div class="line"><span class="tag">  <span class="attr">accept</span>=<span class="string">"image/gif ,image/png, image/jpeg"</span> <span class="attr">multiple</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">type</span>=<span class="string">"camera"</span> /&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-uploader</span>&gt;</span></div></pre></td></tr></table></figure>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><span class="line"><span class="keyword">import</span> &#123; Uploader &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</span><br><span class="line"></span><br><span class="line">components: &#123;</span><br><span class="line">  [Uploader.name]: Uploader</span><br><span class="line">&#125;</span><br></pre></td></tr></table></figure>
+<h3 id="基础用法"><a href="#基础用法" class="headerlink" title="基础用法"></a>基础用法</h3><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-uploader</span> <span class="attr">:after-read</span>=<span class="string">"logContent"</span>&gt;</span></span><br><span class="line">  <span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">type</span>=<span class="string">"camera"</span> /&gt;</span></span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-uploader</span>&gt;</span></span><br></pre></td></tr></table></figure>
+<h3 id="设置input属性"><a href="#设置input属性" class="headerlink" title="设置input属性"></a>设置<code>input</code>属性</h3><figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="tag">&lt;<span class="name">fe-uploader</span> <span class="attr">:after-read</span>=<span class="string">"logContent"</span> </span></span><br><span class="line"><span class="tag">  <span class="attr">accept</span>=<span class="string">"image/gif ,image/png, image/jpeg"</span> <span class="attr">multiple</span>&gt;</span></span><br><span class="line">  <span class="tag">&lt;<span class="name">fe-icons</span> <span class="attr">type</span>=<span class="string">"camera"</span> /&gt;</span></span><br><span class="line"><span class="tag">&lt;/<span class="name">fe-uploader</span>&gt;</span></span><br></pre></td></tr></table></figure>
 <p>#Uploader</p>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
